# soundcom

./: .gitignore  CMakeLists.txt  README.md  doxyfile  format_sources  soundcom.kdev4
src/: .device.cpp.kate-swp  dataframe.cpp  dataframe.h  device.cpp  device.h  main.cpp  modem.h  psh_modem.cpp  psh_modem.h
